# bump-semver-using-conventional-commits

./: README.md  ci.sh  config.toml  pyproject.toml
.github/workflows/: main.yml  pr.yml
conventional_commit_cli/: calculate.py  conventional_commit_cli.py  validate.py
conventional_semver/: __main__.py  calculate.py  conventional_semver.py
src/conventional_semver/: conventional_semver.py  validate.py
tests/: integration.bats  test_conventional_commit_cli.py  test_conventional_semver.py
tests/data/: 001.json  002.json  003.json  004.json  005.json  006.json  007.json  008.json  009.json  010.json  011.json  012.json
