[tool.poetry]
name = "conventional_semver"
version = "0.2.5"
description = "CLI tool for deciding the next semantic version of the project, using conventional commits."
authors = ["Erik Thorsell <erik@thorsell.io>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pccc = "^0.4.14"
semantic-version = "^2.10.0"
gitpython = "^3.1.40"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
flake8 = "^6.1.0"
pytest = "^7.4.4"

[tool.poetry.scripts]
conventional_semver = "conventional_semver.conventional_semver:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
